2018-09-17  Bruno Haible  <bruno@clisp.org>

	Remove the 'fixaclocal' auxiliary script.
	* autogen.sh: Don't invoke fixaclocal.
	* Makefile.am (ACLOCAL): Remove override.
	(EXTRA_DIST): Remove build-aux/fixaclocal.
	* build-aux/fixaclocal: Remove file.

2018-05-17  Bruno Haible  <bruno@clisp.org>

	Prepare for 0.9.10 release.
	* version.sh: Bump version number, date, gnulib version.
	* README: Update version.

2018-05-17  Bruno Haible  <bruno@clisp.org>

	doc: Fix @menu structure (regression from 2017-12-10).
	* doc/libunistring.texi (Introduction): Fix @menu.

2018-05-17  Bruno Haible  <bruno@clisp.org>

	Allow use of automake-1.16.
	* autogen.sh: Update comments.

2018-04-07  Bruno Haible  <bruno@clisp.org>

	Implement the documented functions u*_casing_*_context.
	Reported by Genki Sky <sky@genki.is>.
	* autogen.sh (GNULIB_MODULES): Add unicase/u*-prefix-context,
	unicase/u*-suffix-context.
	* lib/unicase/.gitignore: Update.
	* gnulib-m4/gnulib-cache.m4: Updated by gnulib-tool.
	* NEWS: Mention the change.

2018-03-27  Bruno Haible  <bruno@clisp.org>

	Doc tweaks.
	* README: Don't recommend to use --prefix=/usr/local, as it produces
	problems with GCC (since GCC's treatment of /usr/local/include and
	/usr/local/lib is inconsistent by default).

2011-01-29  Bruno Haible  <bruno@clisp.org>

	* m4/woe32-dll.m4: Add a comment.

2018-02-28  Daiki Ueno  <ueno@gnu.org>

	* version.sh: Bump version number and date.
	* README: Update version.

2018-02-02  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* NEWS: Mention the multithread-safety fix from gnulib module 'malloca'.

2018-01-27  Bruno Haible  <bruno@clisp.org>

	Rename some file.
	* INSTALL.windows: Renamed from README.windows.
	* Makefile.am (EXTRA_DIST): Update.
	* doc/libunistring.texi (Installation): Likewise.

2017-12-10  Bruno Haible  <bruno@clisp.org>

	Documentation updates.
	Mostly based on feedback by Richard Stallman <rms@gnu.org>.